<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginStart="30sp"
    android:layout_marginEnd="30sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_txt"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginTop="25sp"
                android:layout_marginBottom="10sp">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/web_bio">

            </TextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:background="@color/black"
                android:layout_marginTop="10sp">
            </View>

        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25sp"
            android:orientation="horizontal"
            android:layout_marginBottom="20sp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fullname_view"
                android:layout_marginRight="30sp"
                android:layout_marginEnd="30sp">
            </TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:hint="@string/fn_txt"
                android:textSize="15sp"
                >

            </com.google.android.material.textfield.TextInputEditText>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:hint="@string/ln_txt"
                android:textSize="15sp"
                >

            </com.google.android.material.textfield.TextInputEditText>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="25sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30sp"
                android:layout_marginRight="30sp"
                android:text="@string/gender_view"
                android:paddingTop="15sp" >
            </TextView>

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="20sp"
                android:layout_marginStart="20sp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_male">

                </RadioButton>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_female">

                </RadioButton>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25sp"
            android:orientation="horizontal"
            android:layout_marginBottom="20sp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stdID_view"
                android:layout_marginRight="30sp"
                android:layout_marginEnd="30sp">
            </TextView>


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:textSize="15sp"
                android:gravity="center">

            </com.google.android.material.textfield.TextInputEditText>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25sp"
            android:orientation="horizontal"
            android:layout_marginBottom="20sp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sch_view"
                android:layout_marginRight="30sp"
                android:layout_marginEnd="30sp"
                >
            </TextView>


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="21sp"
                android:layout_marginLeft="21sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:textSize="15sp"
                android:gravity="center"
                >

            </com.google.android.material.textfield.TextInputEditText>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25sp"
            android:orientation="horizontal"
            android:layout_marginBottom="20sp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_view"
                android:layout_marginRight="30sp"
                android:layout_marginEnd="30sp"
                >
            </TextView>


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginLeft="26sp"
                android:layout_marginStart="26sp"
                android:layout_marginEnd="20sp"
                android:layout_marginRight="20sp"
                android:gravity="center">


            </com.google.android.material.textfield.TextInputEditText>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25sp"
            android:orientation="horizontal"
            android:layout_marginBottom="20sp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_view"
                android:layout_marginRight="30sp"
                android:layout_marginEnd="30sp">
            </TextView>


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginRight="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginLeft="25sp"
                android:layout_marginStart="25sp"
                android:gravity="center">

            </com.google.android.material.textfield.TextInputEditText>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_reg"
                >

            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>



    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>